# sui_rust_wallet

./: CONTROLLER_REFACTOR.md  Cargo.toml  I18N_COMPLETION.md  I18N_README.md  PRIVATE_KEY_STORAGE.md  Readme.md
assets/: MyApp.icns  icon.sh
locales/: en.yml  zh-CN.yml
src/: controller.rs  i18n.rs  main.rs  model.rs  view.rs
src/controller/: auth_controller.rs  balance_controller.rs  wallet_controller.rs
src/model/: app_state.rs  auth_model.rs  network_model.rs  wallet_model.rs
src/view/: auth_view.rs  balance_view.rs  menu_view.rs  wallet_view.rs
