[package]
name = "sui_rust_learn"
version = "0.1.0"
edition = "2024"

[dependencies]
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
sui_keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys" }

tokio = { version = "1.2", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0.143"
eframe = "0.32.1"
egui = "0.32.1"
fastcrypto = "0.1.9"
