[package]
name = "sui_rust_wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
sui_keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys" }

tokio = { version = "1.2", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0.143"
eframe = "0.32.1"
egui = "0.32.1"
fastcrypto = "0.1.9"
rand_core = { version = "0.9.3", features = ["std"] }
argon2 = "0.5.3"
dirs = "6.0.0"
# AES 加密用于私钥存储
aes-gcm = "0.10.3"
base64 = "0.22.1"
# i18n dependencies
serde = { version = "1.0", features = ["derive"] }

[package.metadata.bundle]
name = "Sui Rust Wallet"
identifier = "com.zhiming.sui_rust_wallet"
icon = ["assets/MyApp.icns"]
